Fix overlapping layout and responsive issues

--- a/sec1.css
+++ b/sec1.css
@@ -139,6 +139,25 @@ h1{
         align-items:center;
     }
 }
+@media (max-width: 904px) {
+  .sec-1-2-1{
+    margin-top:20px;
+    font-size: 15px;
+  }
+  .menu-bar{
+    margin-top:10px;
+    font-size: 25px;
+  }
+  p{
+    font-size: 14px;
+    text-align: center;
+    width: 80%;
+  }
+    .btns>:nth-child(1){
+        padding: 20px;
+        font-size: 12px;
+    }
+}
 
 
 
